# zvim

./: .vimspector.json  pyproject.toml
vim/: Makefile
zvim/: main.py  utils.py
