[tool.poetry]
name = "zvim"
version = "0.1.0"
description = "Zem Personal Vim Config"
authors = ["Dan Foster <dan@zem.org.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
Fabric = "^2.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.961"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zvim = "zvim.main:main"
